syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.authentication.client.api.grpc";
option java_outer_classname = "AuthorityServiceProto";

service AuthorityService {
  rpc findAll (AuthorityFindAllGrpcCmd) returns (PageOfAuthorityFindAllGrpcCo);
  rpc findById (google.protobuf.Int64Value) returns (AuthorityFindByIdGrpcCo);
}

message AuthorityFindAllGrpcCmd {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue code = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.Int32Value current = 4;
  google.protobuf.Int32Value page_size = 5;
}

message AuthorityFindAllGrpcCo {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue code = 2;
  google.protobuf.StringValue name = 3;
}

message AuthorityFindByIdGrpcCo {
  google.protobuf.Int64Value id = 1;
  google.protobuf.StringValue code = 2;
  google.protobuf.StringValue name = 3;
}

message PageOfAuthorityFindAllGrpcCo {
  repeated AuthorityFindAllGrpcCo content = 1;
  int32 total_pages = 2;
}
